--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h2 {
     font-family: 'TwCenW01-Medium';
     font-size: 1.3125rem;
     margin: 0 .5em 0;
+    letter-spacing: 1px;
 }
 
 h2 + p {
@@ -48,6 +49,7 @@ h2 + p {
     font-size: .85rem;
     text-transform: uppercase;
     margin-top: .5em;
+    letter-spacing: 1px;
 }
 
 .top-text {
